# Syren-ABM-Framework

./: .gitignore  Cargo.toml  LICENSE  README.md  REVIEW.md
benches/: common.rs  environment_dirty_tracking.rs  gpu_bind_group_creation.rs  gpu_common.rs  gpu_dispatch.rs  gpu_dispatch_poll.rs  gpu_message_finalisation.rs  gpu_readback.rs  gpu_startup.rs  gpu_tick.rs  iterate.rs  message_specialisations.rs  messaging_finalisation.rs  model_agent.rs  query_matching.rs  reduce.rs  review_common.rs  review_findings.rs  scheduler_execution.rs  scheduler_packing.rs  spawn.rs  structural_mutation.rs  tick.rs
examples/sugarscape/: README.md  sugarscape_v2.rs
profile/: sugarscape_cpu_trace.json  sugarscape_gpu_trace.json  toy_economy_trace.json
src/: lib.rs
src/agents/: batch.rs  error.rs  handle.rs  hooks.rs  mod.rs  registry.rs  spawner.rs  template.rs
src/engine/: activation.rs  archetype.rs  borrow.rs  boundary.rs  channel_allocator.rs  commands.rs  component.rs  dirty.rs  dot_export.rs  ecs.rs  entity.rs  error.rs  manager.rs  mod.rs  plan_display.rs  query.rs  random.rs  reduce.rs  scheduler.rs  storage.rs  systems.rs  types.rs  workers.rs
src/engine/archetype/: access.rs  columns.rs  core.rs  lifecycle.rs  migration.rs  mod.rs
src/engine/borrow/: guard.rs  mod.rs  tests.rs  tracker.rs
src/engine/component/: bundle.rs  descriptor.rs  global.rs  mod.rs  registry.rs  signature.rs
src/engine/entity/: entities.rs  entity.rs  location.rs  mod.rs  shards.rs
src/engine/error/: attribute.rs  execution.rs  internal.rs  mod.rs  move_error.rs  primitives.rs  registry.rs  spawn.rs
src/engine/manager/: data.rs  ecs_manager.rs  ecs_reference.rs  iteration.rs  mod.rs  phase.rs  query_executor.rs  query_param.rs
src/engine/storage/: attribute.rs  locked_attribute.rs  mod.rs  slice.rs  tests.rs  type_erased_attribute.rs
src/environment/: boundary.rs  builder.rs  error.rs  handle.rs  mod.rs  store.rs  system.rs  uniform.rs
src/gpu/: context.rs  dispatch.rs  mirror.rs  mod.rs  pipeline.rs  resource.rs
src/messaging/: aligned_buffer.rs  buffer_set.rs  error.rs  gpu.rs  message.rs  mod.rs  registry.rs  thread_local_emit.rs
src/messaging/specialisations/: brute_force.rs  bucket.rs  mod.rs  spatial.rs  targeted.rs
src/model/: builder.rs  error.rs  mod.rs  model.rs  nested.rs  sub_scheduler.rs
src/profiling/: mod.rs  profiler.rs
tests/: closed_market_economy.rs  economy_messaging_gpu.rs  engine_boundary_lifecycle.rs  gpu_dispatch_params.rs  mem_layout.rs  scheduler_graph.rs  sugarscape_axtell.rs  sugarscape_basic.rs  toy_economy_baseline.rs  toy_economy_test.rs
tests/sugarscape/: axtell.rs  components.rs  cpu.rs  gpu.rs  gpu_resources.rs  mod.rs
tests/sugarscape/shaders/: agent_intent.wgsl  clear_occupancy.wgsl  resolve_harvest.wgsl  sugar_regrowth.wgsl
