[package]
name = "abm_framework"
version = "0.2.0"
edition = "2021"
rust-version = "1.76"

[lib]
name = "abm_framework"
crate-type = ["rlib"]

[dependencies]
rayon = "1.7.0"
wgpu = { version = "29.0.1", optional = true }
bytemuck = { version = "1.16", features = ["derive"], optional = true }
pollster = { version = "0.4.0", optional = true }
smallvec = "1.15.1"

[dev-dependencies]
criterion = "0.8.1"

wgpu = "29.0.1"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.4.0"

[features]
default = []
gpu = ["wgpu", "bytemuck", "pollster"]
profiling = []
agents = []
gpu_profiling = ["gpu", "profiling"]
all = ["gpu", "agents", "profiling"]

[[bench]]
name = "spawn"
harness = false

[[bench]]
name = "iterate"
harness = false

[[bench]]
name = "tick"
harness = false

[[bench]]
name = "reduce"
harness = false

[[bench]]
name = "gpu_startup"
harness = false
required-features = ["gpu"]

[[bench]]
name = "gpu_dispatch"
harness = false
required-features = ["gpu"]

[[bench]]
name = "gpu_tick"
harness = false
required-features = ["gpu"]