[package]
name = "abm_framework"
version = "0.4.0"
edition = "2021"
rust-version = "1.87"
description = "A parallel Rust framework for agent-based models with ECS storage, scheduling, messaging, environments, and optional GPU execution."
license = "MIT"
repository = "https://github.com/AshvinPerera/ABM-Framework"
homepage = "https://github.com/AshvinPerera/ABM-Framework"
documentation = "https://docs.rs/abm_framework"
exclude = [
    ".idea/**",
    ".vscode/**",
    ".vs/**",
    "profile/**",
    "CODE_REVIEW_FINDINGS.md",
]

[lib]
name = "abm_framework"
crate-type = ["rlib"]

[dependencies]
rayon = "1.7.0"
wgpu = { version = "29.0.1", optional = true }
bytemuck = { version = "1.16", features = ["derive"], optional = true }
pollster = { version = "0.4.0", optional = true }
smallvec = "1.15.1"
thiserror = "2"
parking_lot = { version = "0.12", features = ["arc_lock"] }

[dev-dependencies]
criterion = "0.8.1"

wgpu = "29.0.1"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.4.0"

[features]
default = []
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster"]
profiling = []
agents = []
environment = []
messaging = []
messaging_gpu = ["messaging", "gpu"]
model = ["agents", "environment"]
gpu_profiling = ["gpu", "profiling"]
all = ["gpu", "agents", "environment", "profiling", "messaging", "messaging_gpu", "model"]

[[bench]]
name = "spawn"
harness = false

[[bench]]
name = "iterate"
harness = false

[[bench]]
name = "tick"
harness = false

[[bench]]
name = "reduce"
harness = false

[[bench]]
name = "query_matching"
harness = false

[[bench]]
name = "scheduler_packing"
harness = false

[[bench]]
name = "environment_dirty_tracking"
harness = false
required-features = ["environment"]

[[bench]]
name = "messaging_finalisation"
harness = false
required-features = ["messaging"]

[[bench]]
name = "structural_mutation"
harness = false

[[bench]]
name = "model_agent"
harness = false
required-features = ["model"]

[[bench]]
name = "scheduler_execution"
harness = false

[[bench]]
name = "message_specialisations"
harness = false
required-features = ["messaging"]

[[bench]]
name = "gpu_startup"
harness = false
required-features = ["gpu"]

[[bench]]
name = "gpu_dispatch"
harness = false
required-features = ["gpu"]

[[bench]]
name = "gpu_tick"
harness = false
required-features = ["gpu"]

[[bench]]
name = "gpu_dispatch_poll"
harness = false
required-features = ["gpu"]

[[bench]]
name = "gpu_readback"
harness = false
required-features = ["gpu"]

[[bench]]
name = "gpu_bind_group_creation"
harness = false
required-features = ["gpu"]

[[bench]]
name = "gpu_message_finalisation"
harness = false
required-features = ["model", "messaging_gpu"]
